--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,25 @@
 /*@import url('https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap');*/
 
 :root {
-    --container-spacing-px: 20px;
-    --color-calcText: rgb(137, 201, 8);
-    --color-background: rgb(31, 56, 70);
+    --button-spacing-px: 6px;
+    --buttoncontainer-padding: 10px;
+    --display-margin: 20px;
+
+    --color-background: #693668;
+
+    --color-display: #F84AA7;
+    --color-calcText: #1B1B3A;
+    
+    --color-button: #F84AA7;
+    --color-button-border: #FF3562;
+
+    --color-button-hover: #3e8e41;
+    --color-button-shadow: rgb(133, 87, 150);
+
+    --color-button-active: #2d682f;
+    --color-button-shadow-active: rgb(95, 57, 97);
+    
+    --color-black: rgb(0,0,0);
 }
 
 html {
@@ -13,36 +29,34 @@ html {
 }
 
 #calculator {
-    background-color: rgb(20, 20, 20);
+    background-color: var(--color-background);
     display: grid;
     width: 600px;
     margin: auto;
-    border: 1px solid #000000;
-    border-radius: 2rem;
+    border: 1px solid var(--color-button-border);
+    border-radius: 1rem;
 }
 
 #calculator-text {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: auto;
-    margin-top: var(--container-spacing-px);
-    margin-bottom: var(--container-spacing-px);
+    margin: var(--display-margin) auto var(--display-margin) auto;
     color: var(--color-calcText);
-    background-color: var(--color-background);
+    background-color: var(--color-display);
     line-height: 100px;
     width: 500px;
     height: 100px;
-    border: 1px solid #000000;
+    border: 1px solid var(--color-button-border);
     border-radius: 1rem;
 }
 
 #input-label {
-    margin-left: var(--container-spacing-px);
+    margin-left: var(--button-spacing-px);
 }
 
 #output-label {
-    margin-right: var(--container-spacing-px);
+    margin-right: var(--button-spacing-px);
 }
 
 #button-container {
@@ -53,23 +67,40 @@ html {
 }
 
 #digit-container {
+    padding: var(--buttoncontainer-padding);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     justify-content: space-evenly;
-    grid-column-gap: var(--container-spacing-px);
-    grid-row-gap: var(--container-spacing-px);
 }
 
 #operator-container {
+    padding: var(--buttoncontainer-padding);
+    /*display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    */
+
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
 .calc-button {
-    background-color: LightSkyBlue;
+    margin: var(--button-spacing-px);
+    background-color: var(--color-button);
+    color: var(--color-calcText);
     text-align: center;
-    border: 2px solid #ced4da;
-    border-radius: 1rem;
+    border: 2px solid var(--color-button-border);
+    border-radius: 0.2rem;
+    cursor: pointer;
+    box-shadow: 0 6px var(--color-button-shadow);
+}
+
+.calc-button:hover {background-color: var(--color-button-hover)}
+
+.calc-button:active {
+  background-color: var(--color-button-active);
+  box-shadow: 0 px var(--color-button-shadow);
+  transform: translateY(3px);
 }
