--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,700&display=swap');
 
 :root {
     --button-spacing-px: 6px;
@@ -6,9 +6,9 @@
     --display-margin: 20px;
 
     --color-background: #693668;
-
+    
     --color-display: #F84AA7;
-    --color-calcText: #1B1B3A;
+    --color-calcText: #1b3a1b;
     
     --color-button: #F84AA7;
     --color-button-border: #FF3562;
@@ -24,6 +24,7 @@
 
 html {
     background: url("background.jpg");
+    font-family: 'Ubuntu', sans-serif;
     /*background-color: gray;
     background-size: cover;*/
 }
@@ -33,7 +34,7 @@ html {
     display: grid;
     width: 600px;
     margin: auto;
-    border: 1px solid var(--color-button-border);
+    border: 2px solid var(--color-button-border);
     border-radius: 1rem;
 }
 
@@ -47,7 +48,7 @@ html {
     line-height: 100px;
     width: 500px;
     height: 100px;
-    border: 1px solid var(--color-button-border);
+    border: 2px solid var(--color-button-border);
     border-radius: 1rem;
 }
 
@@ -95,6 +96,7 @@ html {
     border-radius: 0.2rem;
     cursor: pointer;
     box-shadow: 0 6px var(--color-button-shadow);
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .calc-button:hover {background-color: var(--color-button-hover)}
