--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 }
 
 html {
-    background: url("background.jpg");
+    background: url("/Images/background.jpg");
     font-family: 'Ubuntu', sans-serif;
 }
 
