--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,500;1,700&display=swap');
 
 :root {
+    --calculator-width-px: 600px;
+    --calculator-height-px: 600px;
     --button-spacing-px: 6px;
     --buttoncontainer-padding: 10px;
     --display-margin: 20px;
     --display-text-margin: 10px;
+    --font-size-button-px: 36px;
+    --font-size-display-header: 20px;
+    --font-size-keyboard-header: 24px;
+    --image-length-px: 24px;
 
     --color-background: #693668;
     
-    --color-display: #F84AA7;
+    --color-display: #4793a7;
     --color-black: rgb(0,0,0);
     --color-shadow: rgba(0, 0, 0, 0.425);
     
@@ -18,18 +24,26 @@
     --color-button-hover: #3e8e41;
     --color-button-shadow: rgb(133, 87, 150);
     --color-button-active: #2d682f;
-
-    --color-explanatory-label: #4793a7;
 }
+/* 
+ * TODO:
+
+ * Change global variables when under 600px height
+ * 
+@media screen and (max-height: 600px) {
+    :root {
+        
+    }
+}*/
 
 html {
-    background: url("../Calculator/Images/background.jpg");
+    background: url("../Images/background.jpg");
     font-family: 'Ubuntu', sans-serif;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,8 +56,8 @@ header {
     margin: var(--display-margin) auto var(--display-margin) auto;
     padding: var(--display-text-margin);
     color: var(--color-black);
-    background-color: var(--color-explanatory-label);
-    font-size: 40px;
+    background-color: var(--color-display);
+    font-size: var(--font-size-button-px);
     border: 2px solid var(--color-button-border);
     border-radius: 1rem;
     box-shadow: 8px 8px 5px var(--color-shadow);
@@ -53,8 +67,8 @@ header {
     background-color: var(--color-background);
     display: grid;
     grid-template-rows: 1fr 3fr;
-    width: 600px;
-    height: 600px;
+    width: var(--calculator-width-px);
+    height: var(--calculator-height-px);
     border: 2px solid var(--color-button-border);
     border-radius: 1rem;
     box-shadow: 8px 8px 5px var(--color-shadow);
@@ -76,13 +90,16 @@ header {
 .display-label {
     display: flex;
     align-items: center;
-    font-size: 40px;
     margin-left: var(--display-text-margin);
     margin-right: var(--display-text-margin);
 }
 
 .explanatory-label {
-    font-size: 20px;
+    font-size: var(--font-size-display-header);
+}
+
+.input-output {
+    font-size: var(--font-size-button-px);
 }
 
 .left-label {
@@ -97,9 +114,9 @@ header {
     display: grid;
     margin: auto;
     grid-template-columns: 4fr 2fr;
-    width: 600px;
+    width: 100%;
     height: 100%;
-    font-size: 30px;
+    font-size: var(--font-size-button-px);
 }
 
 #digit-container {
@@ -144,8 +161,7 @@ header {
     flex-direction: column;
     margin: var(--display-margin) auto var(--display-margin) auto;
     color: var(--color-black);
-    background-color: var(--color-explanatory-label);
-    font-size: 24px;
+    background-color: var(--color-display);
     border: 2px solid var(--color-button-border);
     border-radius: 1rem;
     box-shadow: 8px 8px 5px var(--color-shadow);
@@ -153,15 +169,16 @@ header {
 
 #label-keyboard {
     margin: var(--display-text-margin);
+    font-size: var(--font-size-keyboard-header);
 }
 
 .label-button-explanations {
     margin: var(--display-text-margin);
-    font-size: 20px;
     text-align: center;
+    font-size: var(--font-size-display-header);
 }
 
 .image-button {
-    width: 24px;
-    height: 24px;
+    width: var(--image-length-px);
+    height: var(--image-length-px);
 }
