--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
 }*/
 
 html {
-    background: url("../Calculator/Images/background.jpg");
+    background: url("/Images/background.jpg");
     font-family: 'Ubuntu', sans-serif;
 }
 
